# cobot-pick-place

./: .gitignore  EyeInHand.md  README.md  calibrate_camera.py  camera_calibration.npz  detect_aruco_pose.py  eye_in_hand_calibration.npz  generate_aruco.py  readmetodo.md  requirements.txt  temp.txt  test_plan.txt  walkthrough.md
tmr_ros2/: LICENSE  README.md
tmr_ros2/custom_package/: CMakeLists.txt  package.xml
tmr_ros2/custom_package/launch/: eye_in_hand_calibration.launch.py  pick_place_demo.launch.py
tmr_ros2/custom_package/scripts/: eye_in_hand_calibration.py  move_xyzrpy.py  pick_place_demo.py
tmr_ros2/custom_package/src/: calibrate_camera_tmros2.cpp  detect_aruco_pose_tmros2.cpp  get_pose_tmros2.cpp  send_command.cpp
tmr_ros2/demo/src/: demo_ask_item.cpp  demo_ask_sta.cpp  demo_connect_tm.cpp  demo_leave_listen_node.cpp  demo_send_script.cpp  demo_set_event.cpp  demo_set_io.cpp  demo_set_positions.cpp  demo_write_item.cpp
tmr_ros2/tm_driver/: CMakeLists.txt  package.xml
tmr_ros2/tm_driver/src/: tm_driver_custom.cpp  tm_ros2_svr.cpp
tmr_ros2/tm_move_group/launch/: tm5-700_run_move_group_custom.launch.py
